@@ -3,6 +3,7 @@
 *
 
 - DCI instance discovery
+- Array initializers in NXSL
 - NXSL function PostEvent can use event names instead of event codes
 - New NXSL functions: AgentReadParameter, CreateDCI, ManageObject, UnmanageObject
 - Management console:
